// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle should renders correctly active 1`] = `
<View
  collapsable={false}
  needsOffscreenAlphaCompositing={true}
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(43, 120, 238, 1)",
      "borderRadius": 30,
      "height": 45,
      "opacity": 1,
      "padding": 3,
      "width": 75,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#FFF",
        "borderRadius": 37.5,
        "flex": 1,
        "transform": Array [
          Object {
            "translateX": 30,
          },
        ],
      }
    }
  />
</View>
`;

exports[`Toggle should renders correctly active and disabled 1`] = `
<View
  collapsable={false}
  needsOffscreenAlphaCompositing={true}
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(43, 120, 238, 1)",
      "borderRadius": 30,
      "height": 45,
      "opacity": 0.4,
      "padding": 3,
      "width": 75,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#FFF",
        "borderRadius": 37.5,
        "flex": 1,
        "transform": Array [
          Object {
            "translateX": 30,
          },
        ],
      }
    }
  />
</View>
`;

exports[`Toggle should renders correctly by default 1`] = `
<View
  collapsable={false}
  needsOffscreenAlphaCompositing={true}
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(155, 161, 176, 1)",
      "borderRadius": 30,
      "height": 45,
      "opacity": 1,
      "padding": 3,
      "width": 75,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#FFF",
        "borderRadius": 37.5,
        "flex": 1,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
  />
</View>
`;

exports[`Toggle should renders correctly disabled 1`] = `
<View
  collapsable={false}
  needsOffscreenAlphaCompositing={true}
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(155, 161, 176, 1)",
      "borderRadius": 30,
      "height": 45,
      "opacity": 0.4,
      "padding": 3,
      "width": 75,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#FFF",
        "borderRadius": 37.5,
        "flex": 1,
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      }
    }
  />
</View>
`;
